fixed width on small devices

--- a/src/Components/contact.css
+++ b/src/Components/contact.css
@@ -8,15 +8,15 @@
 }
 
 .contact--headshot {
-    width: 450px;
+    width: 25%;
     border-radius: 50%;
     padding: 30px;
 }
 
 .contact--container {
     display: grid;
-    grid-template-columns: 40% 50%;
-    gap: 5%;
+    grid-template-columns: 35% 50%;
+    gap: 15%;
     align-items: center;
 }
 
@@ -27,11 +27,8 @@
 }
 
 .contact--option {
-    border-radius: 10px;
-    padding:1.2rem;
-    text-align: center;
-    transition: var(transition);
-    overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 .contact--option h4 {
@@ -52,7 +49,6 @@ form {
 }
 
 input, textarea {
-    width: 100%;
     padding: 1.5rem;
     border-radius: .5rem;
     border: 1px solid var(--color-primary);
@@ -69,6 +65,20 @@ input, textarea {
         gap: 1.5rem;
     }
 
+    .contact--headshot {
+        width: 60%;
+        padding: 10px;
+    }
+
+    .contact--option {
+        text-align: center;
+        align-items: center;
+    }
+
+    .contact--img {
+        width: 60%;
+    }
+
     .section--info {
         margin: 0 10% 0 10%;
     }
@@ -78,9 +88,13 @@ input, textarea {
 
 @media screen and (max-width: 600px) {
     .contact--container {
-        width: var(--container-width-sm);
-        grid-template-columns: 1fr;
-        gap: 1rem;
+        display: block;
+        gap: 0rem;
+    }
+
+    .contact--headshot {
+        width: 80%;
+        padding: 0px;
     }
 
     .contact--btn {
